src/test/resources/testcases/invalid/variables/const_non_const.tc
int main() {
    int a = 1;
    const int b = a + 1; // Error: 'a' is a variable, not a compile-time constant
    return 0;
}
